# ai-agent-eval-harness

./: .coveragerc  .env.example  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .safety-project.ini  404.html  AI_Native_Strategy_Module1.pptx  AgentV_Architecture_Whitepaper.docx  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  Dockerfile  FINAL_PHASE3_FULL_V2.txt  FINAL_PHASE3_FULL_V2_COV.txt  LICENSE  LICENSE.old  NOTICE  NOTICE.md  PHASE3_COV.txt  PHASE3_VERIFICATION.txt  README.md  SECURITY.md  SUITE_CONCLUSIVE_V2_PASS.txt  SUITE_FINAL_4_FAILURES.txt  SUITE_FINAL_PHASE1_DONE.txt  SUITE_FINAL_V2_STABLE.txt  SUITE_FINAL_V2_SYNC_PASS.txt  SUITE_FINAL_V2_SYNC_TOTAL_PASS.txt  SUITE_FINAL_V3_TRACEBACKS.txt  SUITE_FINAL_v3_FAILURES.txt  Security_and_Compliance_Roadmap.docx  TESTING.md  absolute_final_test_report.txt  absolute_final_test_report_utf8.txt  adapt-final.txt  adapt-more.txt  (+161 more)
.github/: CODEOWNERS
.tmp_backup/: conftest.py  test_cli_commands_more.py  test_cli_handlers.py.bak  test_cli_handlers_coverage.py.bak
CODE_OF_CONDUCT/: index.html
COVERAGE_INVENTORY/: index.html
LICENSES/: BSD-2-Clause.txt  BSD-3-Clause.txt  HPND.txt  MIT.txt
_astro/: Search.astro_astro_type_script_index_0_lang.B83J-nUF.js  common.uSotUSod.css  ui-core.B14CWQQN.js
admin-console/: app.json  declarations.d.ts  package-lock.json  package.json
agent_api/: index.html
architecture/: index.html
benchmarks/: leaderboard_v1.json  mock_leaderboard_slices.json
cli_reference/: index.html
contributing/: index.html
dashboard/: app.py
dataproc-design/: index.html
dataproc_engine/: README.md  pyproject.toml
dataproc_engine/cli/: main.py
dataproc_engine/core/: base_provider.py  config.py  correlator.py  engine.py  llm_manager.py  logger.py
dataproc_engine/core/paritygen/: README.md  __init__.py  cli.py  modeling.py  parity_synthesizer.py  profiling.py  provenance.py  sampling.py  utils.py  validation.py
dataproc_engine/core/utils/: __init__.py  discovery.py
dataproc_engine/providers/: agriculture.py  decision_support.py  ecommerce.py  education.py  energy.py  finance.py  healthcare.py  manufacturing.py  media_and_entertainment.py  media_entertainment.py  telecom.py  transportation.py  unstructured_provider.py
dataproc_engine/providers/public_sector/: __init__.py  demographics.py  environment.py  housing.py  labor.py
dataproc_engine/scripts/: global_audit.py
dataproc_engine/tests/: conftest.py  test_cli_safety.py  test_correlator_exhaustion.py  test_coverage_final_push.py  test_cross_sector_signal_veracity.py  test_ecommerce_industrial_parity.py  test_education_prod.py  test_error_surge.py  test_final_gap_mastery.py  test_finance_world_bank_prod.py  test_industrial_deep_verification.py  test_industrial_excellence_final.py  test_industrial_excellence_mastery.py  test_industrial_hegemony.py  test_industrial_parity.py  test_infra_extraction_resiliency.py  test_llm_manager.py  test_llm_tiers.py  test_manufacturing_media_specialized.py  test_public_sector_cross_data_hardened.py  test_ultimate_coverage.py  test_ultimate_sector_zenith.py  test_v2_intelligence_core.py
dataproc_engine/tests/benchmarks/: test_cross_sector_parity.py  test_dataproc_parity.py  test_deep_parity_audit.py  test_global_parity_v2.py  test_global_parity_v2_regression_benchmarks.py  test_industry_data_parity_benchmarks.py  test_signal_veracity.py  test_ultimate_parity_zenith.py
dataproc_engine/tests/core/: test_config_and_base.py  test_coverage_baseline.py  test_dataset_engine_pipeline_orchestrator.py  test_edge_case_robustness.py  test_engine_orchestrator.py  test_industry_provider_extraction_coverage.py  test_llm_logic.py  test_llm_tiers.py  test_parity_synthesizer.py  test_paritygen_cli.py  test_paritygen_pipeline.py  test_provider_base_and_configuration.py  test_synthetic_data_generation_cli.py
dataproc_engine/tests/e2e/: test_advanced_sector_data_mastery.py  test_cli_extraction_pipeline_e2e.py  test_coverage_verification.py  test_excellence_final.py  test_excellence_mastery.py  test_final_excellence_suite.py  test_gap_mitigation.py  test_industrial_sector_quality_standards.py
dataproc_engine/tests/functional/: test_cli_rotational_backup_persistence.py  test_correlator_functional.py  test_correlator_unit.py  test_dataset_signal_correlation_functional.py  test_dataset_signal_normalization_functional.py
dataproc_engine/tests/providers/: test_cli_and_provider_boundary_edge_cases.py  test_ecommerce_provider.py  test_education_provider.py  test_energy_extended.py  test_environment_provider.py  test_finance_provider.py  test_healthcare_provider.py  test_manufacturing_provider_supply_chain_logic.py  test_manufacturing_specialized.py  test_omega_industrial_excellence.py  test_provider_deep_industrial_sector_coverage.py  test_public_sector_providers.py  test_sector_edge_cases.py  test_telecom_provider.py  test_unstructured_extended.py  test_unstructured_provider.py
dataproc_engine/tests/resiliency/: test_correlator_exhaustion.py  test_extraction_surge_robustness.py  test_infra_extraction_resiliency.py  test_llm_fallbacks.py  test_llm_tiered_fallback_stability.py  test_provider_extraction_surge_load_resiliency.py  test_public_resiliency.py
dataproc_engine/tests/unit/core/: test_llm_manager_failure_modes_and_recovery.py
dev/: 404.html  index.html  sitemap-0.xml  sitemap-index.xml
docs/: COVERAGE_INVENTORY.md  README.md  RESOURCES_MAP.md  agent_api.md  architecture.md  astro.config.mjs  cli_reference.md  feature_inventory.md  index.md  package.json  plugins.md  publication_guide.md
docs-old/: CODE_OF_CONDUCT.md  SIGNING.md  agent_api.md  api_reference.md  architecture.md  cli_reference.md  contributing.md  feature_inventory.md  index.md  plugins.md  publication_guide.md
docs-v2/: astro.config.mjs  package-lock.json
eval-runner/: __main__.py  cli.py  context.py  engine.py  loader.py  metrics.py  reporter.py  result.py  tool_sandbox.py
eval_runner/: __init__.py  __main__.py  analyzer.py  artifact_plugin.py  auto_translate.py  calibrator.py  (+51 more)
(+27157 files in other folders)
