[project]
name = "multiagent-verify"
version = "1.2.4"
description = "Enterprise-grade reliability framework for AI agents."
readme = "README.md"
authors = [
    { name = "Najeed Khan", email = "ai.eval.harness.contact@gmail.com" }
]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "aiohttp==3.13.5",
    "Flask==3.1.3",
    "flask-cors==6.0.2",
    "requests==2.33.1",
    "jsonschema==4.26.0",
    "PyYAML==6.0.3",
    "sentence-transformers==5.3.0",
    "numpy==2.4.4",
    "datasets==4.8.4",
    "PyJWT==2.12.1",
    "cryptography==46.0.6",
    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "google-genai==1.70.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["eval_runner", "dataproc_engine", "industries"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.jsonl", "*.csv", "*.md", "*.yaml", "*.yml"]

[project.scripts]
multiagent-eval = "eval_runner.cli:main"

[project.entry-points."eval_runner.plugins"]
coverage = "eval_runner.coverage_plugin:CoveragePlugin"

[tool.pytest.ini_options]
testpaths = ["tests", "dataproc_engine/tests"]
addopts = "-ra"
python_files = ["test_*.py"]
pythonpath = ["."]
