[project]
name = "agentv"
version = "1.6.3"
description = "The Enterprise-Grade Reliability Framework for AI Agents"
readme = "README.md"
authors = [
    { name = "Najeed Khan", email = "agentv@agentvos.ai" }
]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "aiohttp==3.14.0",
    "Flask==3.1.3",
    "flask-cors==6.0.2",
    "requests==2.34.2",
    "urllib3==2.7.0",
    "Werkzeug==3.1.8",
    "jsonschema==4.26.0",
    "PyYAML==6.0.3",
    "sentence-transformers==5.5.1",
    "numpy==2.4.6",
    "datasets==4.8.5",
    "PyJWT==2.13.0",
    "cryptography==48.0.0",
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "google-genai==2.8.0",
    "pypdf==6.12.2",
    "python-docx==1.2.0",
    "psutil==7.2.2",
    "httpx==0.28.1",
    "GitPython==3.1.50",
    "sqlalchemy==2.0.50",
    "python-dotenv==1.2.2",
    "Authlib==1.7.2",
    "langchain-openai==1.2.2",
    "langsmith==0.8.9",
    "lxml==6.1.1",
    "Pillow==12.2.0",
    "cyclecore-pq==0.3.0",
    "idna==3.18",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["eval_runner", "dataproc_engine", "industries"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.jsonl", "*.csv", "*.md", "*.yaml", "*.yml"]

[project.scripts]
agentv = "eval_runner.cli:main"

[project.entry-points."eval_runner.plugins"]
coverage = "eval_runner.coverage_plugin:CoveragePlugin"

[tool.pytest.ini_options]
testpaths = ["tests", "dataproc_engine/tests"]
addopts = "-ra"
python_files = ["test_*.py"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "ui: UI tests using playwright",
    "asyncio: mark test as an asyncio test",
    "live: environment-gated integration tests running against CycleCore",
]
filterwarnings = [
    "ignore:.*_UnionGenericAlias.*:DeprecationWarning",
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning",
    "ignore:.*Pydantic V1 functionality.*:UserWarning",
    "ignore:.*DeprecationWarning.*:DeprecationWarning:langchain.*",
    "ignore:.*DeprecationWarning.*:DeprecationWarning:google.genai.*",
    "ignore:.*DeprecationWarning.*:DeprecationWarning:aiohttp.*",
    "ignore:.*jsonschema.RefResolver is deprecated.*:DeprecationWarning",
    "ignore:.*Accessing jsonschema.__version__ is deprecated.*:DeprecationWarning",
    "ignore:.*inspect.iscoroutinefunction.*:DeprecationWarning",
    "ignore:.*coroutine '_wait_for_close' was never awaited.*:RuntimeWarning",
    "ignore:.*allowed_objects.*:DeprecationWarning",
    "ignore:.*default value of `allowed_objects`.*:UserWarning",
    "ignore:.*jsonschema.RefResolver is deprecated.*:DeprecationWarning",
    "ignore:.*Accessing jsonschema.__version__ is deprecated.*:DeprecationWarning",
]

[tool.ruff]
# Standardize on industrial 100-character line length (2026 upgrade)
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Select E (Error), F (Pyflakes), UP (Upgrade), B (Bugbear), I (Isort)
select = ["E", "F", "UP", "B", "I"]
ignore = ["E203"]

# Exclude auxiliary/educational directories from core linting
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "node_modules",
    "dist",
    "build",
    "walkthroughs",
    "docs",
    "examples",
    ".aes",
    "reports",
    "results",
    "runs",
]

[tool.ruff.lint.isort]
known-first-party = ["eval_runner", "dataproc_engine"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
